--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature android:name="android.hardware.nfc" />
 
     <application
         android:hardwareAccelerated="true"
@@ -27,7 +29,11 @@
         <activity android:name=".SearchActivity"
             android:launchMode="singleTop"
             android:label="Search Criteria">
+            <intent-filter>
+                <action android:name="android.nfc.action.TAG_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
 
+        </intent-filter>
         </activity>
         <activity android:name=".MainActivity"
             android:launchMode="singleTop"
